--- a/src/main/webapp/WEB-INF/pages/lab/sphereMap.html
+++ b/src/main/webapp/WEB-INF/pages/lab/sphereMap.html
@@ -8,6 +8,8 @@
             margin: 0;
             width: 100%;
             height: 100%;
+            font-family: "Microsoft yahei", "微软雅黑", "Source Sans Pro", "Helvetica Neue", 'Helvetica', 'Arial',sans-serif;
+
         }
 
         #sphereMap {
