--- a/src/main/webapp/WEB-INF/pages/lab/sphereMap.html
+++ b/src/main/webapp/WEB-INF/pages/lab/sphereMap.html
@@ -18,10 +18,10 @@
         }
         button.reset{
             float: right;
-            padding: 1px 5px 3px;
+            padding: 0.2em 0.4em;
             cursor: pointer;
             color: #6cf;
-            font-size: .7em;
+            font-size: .8em;
             border: 1px solid;
             background-color: rgba(0,0,50,.1);
         }
