词云修改及背景图替换

--- a/src/main/webapp/WEB-INF/pages/lab/index_left.html
+++ b/src/main/webapp/WEB-INF/pages/lab/index_left.html
@@ -29,7 +29,8 @@
                         <div class="chartBorder">
                             <h3>海尔现已有<strong>50+</strong>的产品分类</h3>
                             <div class="myChart">
-                                <iframe src="wordCloud.html"></iframe>
+                                <!--<iframe src="wordCloud.html"></iframe>-->
+                                <a href="#"></a>
                             </div>
                         </div>
                     </div>
