增加全屏地图页面

--- a/src/main/webapp/WEB-INF/pages/lab/flatMap.html
+++ b/src/main/webapp/WEB-INF/pages/lab/flatMap.html
@@ -11,7 +11,7 @@
             height: 98%;
         }
 
-        #mapFlat {
+        .mapFlat {
             height: 100%;
         }
 
@@ -36,17 +36,10 @@
 
 </head>
 <body>
-<div id="mapFlat"></div>
+<div id="mapFlat" class="mapFlat"></div>
 <!--放置地图上的显示信息-->
-<div id="echartTips"></div>
-<!--
-<div class="btnGroup">
-    <div class="selectAll">
-        <label><input type="checkbox">全选</label>
-    </div>
-    <button class="btn switchLegend">图例开关</button>
-</div>
--->
+<div id="echartTips" class="echartTips"></div>
+
 
 </body>
  <script>
