--- a/src/main/webapp/WEB-INF/pages/lab/index.html
+++ b/src/main/webapp/WEB-INF/pages/lab/index.html
@@ -4,6 +4,8 @@
 <link rel="stylesheet" href="${contextPath!}/static/css/common.css">
 <link rel="stylesheet" href="${contextPath!}/static/css/index_left.css">
 <link rel="stylesheet" href="${contextPath!}/static/css/index_right.css">
+<link rel="stylesheet" href="${contextPath!}/static/css/fullScreen_map.css">
+<script src="${contextPath!}/static/asserts/js/jquery-2.2.4.js"></script>
 <script src="${contextPath!}/static/asserts/js/bootstrap.min.js"></script>
 <script src="${contextPath!}/static/asserts/echarts/echarts-3.5.2.js"></script>
 <script src="${contextPath!}/static/js/manyEcharts.js?time=New Date()"></script>
@@ -15,9 +17,12 @@
          <video src="${contextPath!}/static/img/movieHead_blackBoard.mp4"  width="100%" height="100%" preload="auto" >抱歉，您的浏览器不支持video标签</video>
 </div> -->
 <div id="content" class="contai">
-     ##layout("left.html", {}){
+     ##layout("fullScreen_map.html", {}){
 	 ##}
     
+     ##layout("left.html", {}){
+	 ##}
+
      ##layout("right.html", {}){
 	 ##}
   
@@ -28,9 +33,6 @@
 </body>
 </html>
 ##}
-
-<!-- <script src="${contextPath!}/static/js/leftCharts.js?time=New Date()"></script> -->
-
 
 <!--屏幕描述
 一共 7x3 个屏幕，
