--- a/src/main/webapp/WEB-INF/pages/lab/sphereMap.html
+++ b/src/main/webapp/WEB-INF/pages/lab/sphereMap.html
@@ -9,12 +9,10 @@
             width: 100%;
             height: 100%;
             font-family: "Microsoft yahei", "微软雅黑", "Source Sans Pro", "Helvetica Neue", 'Helvetica', 'Arial',sans-serif;
-
         }
 
         #sphereMap {
             height: 95%;
-            /*padding: 2%;*/
         }
         button.reset{
             float: right;
@@ -24,6 +22,10 @@
             font-size: .8em;
             border: 1px solid;
             background-color: rgba(0,0,50,.1);
+
+            position: absolute;
+            right: 5%;
+            bottom: 14%;
         }
     </style>
 
@@ -39,9 +41,12 @@
     <script src="${contextPath!}/static/js/sphere.js"></script>
     <script src="${contextPath!}/static/js/boot.js"></script>
     <script>
-        var h = $(window).height();
-        var bodyFontSize = h / 595 * 100 + "%";
-        $("body").css("font-size", bodyFontSize);
+        function spherePageResize() {
+            var h = $(window).height();
+            var bodyFontSize = h / 595 * 100 + "%";
+            $("body").css("font-size", bodyFontSize);
+        }
+        spherePageResize();
     </script>
 </body>
 <script>
