--- a/src/main/webapp/WEB-INF/pages/lab/index.html
+++ b/src/main/webapp/WEB-INF/pages/lab/index.html
@@ -43,7 +43,7 @@
 -->
 <script>
     $(function () {
-        var $flatBottomSwitchLi = $("#l").find(".flat-footer .legend ul li");
+        var $flatBottomSwitchLi = $("#l.left3x3").find(".flat-footer .legend ul li");
         $flatBottomSwitchLi.find("a").click(function () {
             if($(this).text() ==="中海博睿"){
                 $("#right").hide();
