修改增加新页面后的bug和要求

--- a/src/main/webapp/WEB-INF/pages/lab/wordCloud.html
+++ b/src/main/webapp/WEB-INF/pages/lab/wordCloud.html
@@ -61,6 +61,16 @@
 <script src="${contextPath!}/static/asserts/js/jquery-2.2.4.js"></script>
 <!--<script src="../../../static/asserts/js/jquery-2.2.4.js"></script>-->
 <script>
+/*
+    var wordCloudScale = 1;
+    $(window).load(function () {
+        wordCloudScale = $('body').height()/$(window).height()
+
+    })
+    console.log("~~~~~~~~~~~~~~~~wordCloudScale:",wordCloudScale);
+*/
+
+
     var radius = 210;//3D 球的半径
 //       var  radius = $("#div1").css("width")/2-10;
     var dtr = Math.PI / 180;
@@ -246,60 +256,66 @@
 
         var i = 0;
         var oTag = null;
-        $.getJSON("${contextPath!}/static/data/wordCloudText.json", function (data) {
+        run(radius);
+
+    });
+function run(newRadius) {
+    radius = newRadius;
+    console.log("~~~~~~~~~~~~~~~~newRadius:", radius);
+    $.getJSON("${contextPath!}/static/data/wordCloudText.json", function (data) {
 //            $.getJSON( "../../../static/data/wordCloudText.json", function( data ) {
 
 //                console.log("这里getjson");
-            var items = [];
-            $.each(data, function (key, val) {
-                items.push("<a href=#  style=font-size:" + val + "em>" + key + "</a>");
-            });
-            $("<div/>", {
-                "id": "div1",
-                style: "border:solid 0 skyblue",
-                ALIGN: "center",
-                html: items.join("")
-            }).appendTo("body");
-            //console.log($('div'));
-//            radius = Math.floor($("#div1").width() / 3.14 * bodyScale);
-            oDiv = document.getElementById('div1');
-            aA = oDiv.getElementsByTagName('a');
-
-            for (i = 0; i < aA.length; i++) {
-                oTag = {};
-                oTag.offsetWidth = aA[i].offsetWidth;
-                oTag.offsetHeight = aA[i].offsetHeight;
-                mcList.push(oTag);
-            }
-
-            sineCosine(0, 0, 0);
-
-            positionAll();
-
-            oDiv.onmouseover = function () {
-                active = true;
-            };
-
-            oDiv.onmouseout = function () {
-                active = true;
-            };
-
-            oDiv.onmousemove = function (ev) {
-                var oEvent = window.event || ev;
-
-                mouseX = oEvent.clientX - (oDiv.offsetLeft + oDiv.offsetWidth / 4);
-                mouseY = oEvent.clientY - (oDiv.offsetTop + oDiv.offsetHeight / 4);
-
-                mouseX /= 5;
-                mouseY /= 5;
-            };
-             setTimeout(function () {  
-                setInterval(update, 150);
-              }, 2000)  
-
+        var items = [];
+        $.each(data, function (key, val) {
+            items.push("<a href=#  style=font-size:" + val + "em>" + key + "</a>");
         });
+        $("<div/>", {
+            "id": "div1",
+            style: "border:solid 0 skyblue",
+            ALIGN: "center",
+            html: items.join("")
+        }).appendTo("body");
+        //console.log($('div'));
+//            radius = Math.floor($("#div1").width() / 3.14 * bodyScale);
+        oDiv = document.getElementById('div1');
+        aA = oDiv.getElementsByTagName('a');
+
+        for (i = 0; i < aA.length; i++) {
+            oTag = {};
+            oTag.offsetWidth = aA[i].offsetWidth;
+            oTag.offsetHeight = aA[i].offsetHeight;
+            mcList.push(oTag);
+        }
+
+        sineCosine(0, 0, 0);
+
+        positionAll();
+
+        oDiv.onmouseover = function () {
+            active = true;
+        };
+
+        oDiv.onmouseout = function () {
+            active = true;
+        };
+
+        oDiv.onmousemove = function (ev) {
+            var oEvent = window.event || ev;
+
+            mouseX = oEvent.clientX - (oDiv.offsetLeft + oDiv.offsetWidth / 4);
+            mouseY = oEvent.clientY - (oDiv.offsetTop + oDiv.offsetHeight / 4);
+
+            mouseX /= 5;
+            mouseY /= 5;
+        };
+        setTimeout(function () {
+            setInterval(update, 150);
+        }, 2000)
+
     });
 
+}
 
 </script>
 </body>
