解决平面地图markline报错的问题

--- a/src/main/webapp/WEB-INF/pages/lab/sphereMap.html
+++ b/src/main/webapp/WEB-INF/pages/lab/sphereMap.html
@@ -12,6 +12,7 @@
         }
 
         #sphereMap {
+            /*这里直接设置了高度，在初始化时仍然会报错：宽高未准备好*/
             height: 95%;
         }
         button.reset{
