--- a/src/main/webapp/WEB-INF/pages/lab/wordCloud.html
+++ b/src/main/webapp/WEB-INF/pages/lab/wordCloud.html
@@ -261,7 +261,7 @@
     });
 function run(newRadius) {
     radius = newRadius;
-    console.log("~~~~~~~~~~~~~~~~newRadius:", radius);
+//    console.log("~~~~~~~~~~~~~~~~newRadius:", radius);
     $.getJSON("${contextPath!}/static/data/wordCloudText.json", function (data) {
 //            $.getJSON( "../../../static/data/wordCloudText.json", function( data ) {
 
