实验室状态修改

--- a/src/main/webapp/WEB-INF/pages/lab/index.html
+++ b/src/main/webapp/WEB-INF/pages/lab/index.html
@@ -43,10 +43,9 @@
 -->
 <script>
     $(function () {
-        $(".l.fullScreen_map img.quit").click();
-        $("#r .box:eq(1)").addClass("selected").siblings().removeClass("selected");
-        resetSizeRight();
-
+//        $(".l.fullScreen_map img.quit").click();
+//        $("#r .box:eq(0)").addClass("selected").siblings().removeClass("selected");
+//        resetSizeRight();
     })
 
 
