展开页词云字体变大

--- a/src/main/webapp/WEB-INF/pages/lab/wordCloud.html
+++ b/src/main/webapp/WEB-INF/pages/lab/wordCloud.html
@@ -7,6 +7,7 @@
         html, body {
             height: 95%;
             margin: 0;
+            font-size: 1.2em;
         }
 
         #div1 {
@@ -57,7 +58,6 @@
     </style>
 </head>
 <body>
-
 <script src="${contextPath!}/static/asserts/js/jquery-2.2.4.js"></script>
 <!--<script src="../../../static/asserts/js/jquery-2.2.4.js"></script>-->
 <script>
@@ -72,7 +72,6 @@
 
 
     var radius = 210;//3D 球的半径
-//       var  radius = $("#div1").css("width")/2-10;
     var dtr = Math.PI / 180;
     var d = 600;
 
