新西兰 日本 泰国

--- a/src/main/webapp/WEB-INF/pages/lab/flatMap.html
+++ b/src/main/webapp/WEB-INF/pages/lab/flatMap.html
@@ -52,7 +52,21 @@
 <script src="${contextPath!}/static/js/flat.js"></script>
 
 <script>
+    var bodyScale = 1;
+    var pageH;
+    var pageW;
+    pageH = $(window).height();
+    pageW = pageH * 16 * 7 / (9 * 3);
 
+    function pageResize() {
+        $("#content").css("width", pageW);
+        var bodyFontSize = pageH / 595 * 100 + "%";
+        bodyScale = pageH / 595;
+        $("body").css("font-size", bodyFontSize);
+        $(".fullScreen_map").css("width", pageW);
+        console.log("~~~~~~~~~窗口高度：" + pageH + ",\n宽度:"+pageW+" \nbody字号：" + bodyFontSize)
+    }
+    pageResize();
 </script>
 
 </html>
