--- a/src/main/webapp/WEB-INF/pages/lab/index.html
+++ b/src/main/webapp/WEB-INF/pages/lab/index.html
@@ -26,7 +26,10 @@
      ##layout("right.html", {}){
 	 ##}
 
-     ##layout("centerLab.html", {}){
+    ##layout("centerLab.html", {}){
+    ##}
+
+     ##layout("centerLabWorld.html", {}){
 	 ##}
 
 </div>
