图形提示框字体大小

--- a/src/main/webapp/WEB-INF/pages/lab/flatMap.html
+++ b/src/main/webapp/WEB-INF/pages/lab/flatMap.html
@@ -64,7 +64,7 @@
         bodyScale = pageH / 595;
         $("body").css("font-size", bodyFontSize);
         $(".fullScreen_map").css("width", pageW);
-        console.log("~~~~~~~~~窗口高度：" + pageH + ",\n宽度:"+pageW+" \nbody字号：" + bodyFontSize)
+//        console.log("~~~~~~~~~窗口高度：" + pageH + ",\n宽度:"+pageW+" \nbody字号：" + bodyFontSize)
     }
     pageResize();
 </script>
