--- a/src/main/webapp/WEB-INF/pages/lab/worldCloudFull.html
+++ b/src/main/webapp/WEB-INF/pages/lab/worldCloudFull.html
@@ -63,7 +63,7 @@
 <!--<script src="../../../static/asserts/js/jquery-2.2.4.js"></script>-->
 <script>
 
-    var radius;//3D 球的半径
+    var radius = 300;//3D 球的半径
     var dtr = Math.PI / 180;
     var d = 600;
 
@@ -232,6 +232,10 @@
         cc = Math.cos(c * dtr);
     }
 
+    //    function resizeText(bodyScale) {
+    //        radius =5 * bodyScale;
+    //    }
+
     $(function () {
         var h = $(window.parent).height();
         var  bodyFontSize= h / 625 * 100 + "%";
@@ -244,63 +248,63 @@
         var oTag = null;
         run(radius);
     });
-function run(newRadius) {
-    radius = newRadius;
+    function run(newRadius) {
+        radius = newRadius;
 //    console.log("~~~~~~~~~~~~~~~~newRadius:", radius);
-    $.getJSON("${contextPath!}/static/data/wordCloudText.json", function (data) {
+        $.getJSON("${contextPath!}/static/data/wordCloudText.json", function (data) {
 //            $.getJSON( "../../../static/data/wordCloudText.json", function( data ) {
 
 //                console.log("这里getjson");
-        var items = [];
-        $.each(data, function (key, val) {
-            items.push("<a href=#  style=font-size:" + val + "em>" + key + "</a>");
+            var items = [];
+            $.each(data, function (key, val) {
+                items.push("<a href=#  style=font-size:" + val + "em>" + key + "</a>");
+            });
+            $("<div/>", {
+                "id": "div1",
+                style: "border:solid 0 skyblue",
+                ALIGN: "center",
+                html: items.join("")
+            }).appendTo("body");
+            //console.log($('div'));
+//            radius = Math.floor($("#div1").width() / 3.14 * bodyScale);
+            oDiv = document.getElementById('div1');
+            aA = oDiv.getElementsByTagName('a');
+
+            for (i = 0; i < aA.length; i++) {
+                oTag = {};
+                oTag.offsetWidth = aA[i].offsetWidth;
+                oTag.offsetHeight = aA[i].offsetHeight;
+                mcList.push(oTag);
+            }
+
+            sineCosine(0, 0, 0);
+
+            positionAll();
+
+            oDiv.onmouseover = function () {
+                active = true;
+            };
+
+            oDiv.onmouseout = function () {
+                active = true;
+            };
+
+            oDiv.onmousemove = function (ev) {
+                var oEvent = window.event || ev;
+
+                mouseX = oEvent.clientX - (oDiv.offsetLeft + oDiv.offsetWidth / 4);
+                mouseY = oEvent.clientY - (oDiv.offsetTop + oDiv.offsetHeight / 4);
+
+                mouseX /= 5;
+                mouseY /= 5;
+            };
+            setTimeout(function () {
+                setInterval(update, 150);
+            }, 2000)
+
         });
-        $("<div/>", {
-            "id": "div1",
-            style: "border:solid 0 skyblue",
-            ALIGN: "center",
-            html: items.join("")
-        }).appendTo("body");
 
-        oDiv = document.getElementById('div1');
-        aA = oDiv.getElementsByTagName('a');
-        //定义字符云的半径
-        radius=oDiv.clientWidth/2-50;
-        for (i = 0; i < aA.length; i++) {
-            oTag = {};
-            oTag.offsetWidth = aA[i].offsetWidth;
-            oTag.offsetHeight = aA[i].offsetHeight;
-            mcList.push(oTag);
-        }
-
-        sineCosine(0, 0, 0);
-
-        positionAll();
-
-        oDiv.onmouseover = function () {
-            active = true;
-        };
-
-        oDiv.onmouseout = function () {
-            active = true;
-        };
-
-        oDiv.onmousemove = function (ev) {
-            var oEvent = window.event || ev;
-
-            mouseX = oEvent.clientX - (oDiv.offsetLeft + oDiv.offsetWidth / 4);
-            mouseY = oEvent.clientY - (oDiv.offsetTop + oDiv.offsetHeight / 4);
-
-            mouseX /= 5;
-            mouseY /= 5;
-        };
-        setTimeout(function () {
-            setInterval(update, 150);
-        }, 2000)
-
-    });
-
-}
+    }
 
 </script>
 </body>
