--- a/src/main/webapp/WEB-INF/pages/lab/full.html
+++ b/src/main/webapp/WEB-INF/pages/lab/full.html
@@ -6,7 +6,7 @@
 
 <!--<link rel="stylesheet" href="${contextPath!}/static/css/index_right.css">-->
 <link rel="stylesheet" href="${contextPath!}/static/css/fullScreen_map.css">
-<script src="${contextPath!}/static/asserts/js/jquery-2.2.4.js"></script>
+<!--<script src="${contextPath!}/static/asserts/js/jquery-2.2.4.js"></script>-->
 <script src="${contextPath!}/static/asserts/js/bootstrap.min.js"></script>
 <script src="${contextPath!}/static/asserts/echarts/echarts-3.5.2.js"></script>
 <script src="${contextPath!}/static/js/manyEcharts.js?time=New Date()"></script>
