整理拆除大屏后的index

--- a/src/main/webapp/WEB-INF/pages/lab/flatMap.html
+++ b/src/main/webapp/WEB-INF/pages/lab/flatMap.html
@@ -51,6 +51,7 @@
 <script src="${contextPath!}/static/asserts/echarts/world.js"></script>
 <script src="${contextPath!}/static/js/flat.js"></script>
 
+<!--
 <script>
     var bodyScale = 1;
     var pageH;
@@ -59,7 +60,7 @@
     pageW = pageH * 16 * 7 / (9 * 3);
 
     function pageResize() {
-        $("#content").css("width", pageW);
+//        $("#content").css("width", pageW);
         var bodyFontSize = pageH / 595 * 100 + "%";
         bodyScale = pageH / 595;
         $("body").css("font-size", bodyFontSize);
@@ -68,5 +69,6 @@
     }
     pageResize();
 </script>
+-->
 
 </html>
