--- a/src/main/webapp/WEB-INF/pages/lab/full.html
+++ b/src/main/webapp/WEB-INF/pages/lab/full.html
@@ -18,19 +18,18 @@
 <body>
 
 <div id="content" class="contai">
+
      ##layout("fullScreen_map.html", {}){
      ##}
+
 </div>
+
+<script>
+    pageResize();
+
+</script>
 </body>
 </html>
 ##}
 
-<script>
-    $(function () {
-//        $(".l.fullScreen_map img.quit").click();
-//        $("#r .box:eq(0)").addClass("selected").siblings().removeClass("selected");
-//        resetSizeRight();
-    })
 
-
-</script>
