--- a/src/main/webapp/WEB-INF/pages/lab/index.html
+++ b/src/main/webapp/WEB-INF/pages/lab/index.html
@@ -4,8 +4,8 @@
 <link rel="stylesheet" href="${contextPath!}/static/css/common.css">
 <link rel="stylesheet" href="${contextPath!}/static/css/index_left.css">
 <link rel="stylesheet" href="${contextPath!}/static/css/index_right.css">
-<link rel="stylesheet" href="${contextPath!}/static/css/fullScreen_map.css">
-<script src="${contextPath!}/static/asserts/js/jquery-2.2.4.js"></script>
+<!--<link rel="stylesheet" href="${contextPath!}/static/css/fullScreen_map.css">-->
+<!--<script src="${contextPath!}/static/asserts/js/jquery-2.2.4.js"></script>-->
 <script src="${contextPath!}/static/asserts/js/bootstrap.min.js"></script>
 <script src="${contextPath!}/static/asserts/echarts/echarts-3.5.2.js"></script>
 <script src="${contextPath!}/static/js/manyEcharts.js?time=New Date()"></script>
@@ -16,18 +16,17 @@
 
 <div id="content" class="contai">
 
-     ##layout("fullScreen_map.html", {}){
-	 ##}
-
 
      ##layout("left.html", {}){
 	 ##}
 
-     ##layout("right.html", {}){
-	 ##}
 
-    ##layout("centerLab.html", {}){
+    ##layout("right.html", {}){
     ##}
+
+
+     ##layout("centerLab.html", {}){
+     ##}
 
      ##layout("centerLabWorld.html", {}){
 	 ##}
@@ -38,6 +37,7 @@
 ##}
 
 <script>
+    pageResize();
     $(function () {
 //        $(".l.fullScreen_map img.quit").click();
 //        $("#r .box:eq(0)").addClass("selected").siblings().removeClass("selected");
