去除冗余引入的css和js

--- a/src/main/webapp/WEB-INF/pages/lab/index.html
+++ b/src/main/webapp/WEB-INF/pages/lab/index.html
@@ -15,7 +15,9 @@
 <body>
 
 <div id="content" class="contai">
-
+<script>
+    pageResize();
+</script>
 
      ##layout("left.html", {}){
 	 ##}
@@ -37,7 +39,7 @@
 ##}
 
 <script>
-    pageResize();
+
     $(function () {
 //        $(".l.fullScreen_map img.quit").click();
 //        $("#r .box:eq(0)").addClass("selected").siblings().removeClass("selected");
