隐藏“点击重置”按钮

--- a/src/main/webapp/WEB-INF/pages/lab/sphereMap.html
+++ b/src/main/webapp/WEB-INF/pages/lab/sphereMap.html
@@ -33,7 +33,7 @@
 </head>
 <body>
     <div id="sphereMap"></div>
-    <button class="reset">点击重置</button>
+    <button class="reset" style="display: none">点击重置</button>
 
     <script src="${contextPath!}/static/asserts/js/jquery-2.2.4.js"></script>
     <script src="${contextPath!}/static/js/common.js"></script>
