加载视频等

--- a/src/main/webapp/WEB-INF/pages/lab/full.html
+++ b/src/main/webapp/WEB-INF/pages/lab/full.html
@@ -12,6 +12,10 @@
 <script src="${contextPath!}/static/js/manyEcharts.js?time=New Date()"></script>
 <script src="${contextPath!}/static/js/common.js?time=New Date()"></script>
 <script src="${contextPath!}/static/asserts/echarts/wordcloudFromNet.js?time=New Date()"></script>
+<script>
+
+    var fromPage='${fromPage!}';
+</script>
 <script src="${contextPath!}/static/js/full.js"></script>
 <script src="${contextPath!}/static/js/full_statistics.js"></script>
 
