--- a/src/main/webapp/WEB-INF/pages/lab/full.html
+++ b/src/main/webapp/WEB-INF/pages/lab/full.html
@@ -21,8 +21,12 @@
 
 <body>
 
-<div id="content" class="contai">
-
+<div id="content" class="contai"  >
+	<script>
+	   if(fromPage!="fullScreen"){
+	        videoFadeOut();
+	    }
+	</script>
      ##layout("fullScreen_map.html", {}){
      ##}
 
