--- a/src/main/webapp/WEB-INF/pages/lab/full.html
+++ b/src/main/webapp/WEB-INF/pages/lab/full.html
@@ -1,5 +1,5 @@
 ## layout("ulab.html",{title:"U-lab全球互联数据中心"}){
-<html lang="zh-CN">
+<html lang="zh-CN" >
 <link rel="stylesheet" href="${contextPath!}/static/asserts/css/bootstrap.min.css">
 <link rel="stylesheet" href="${contextPath!}/static/css/common.css">
 <link rel="stylesheet" href="${contextPath!}/static/css/index_left.css">
@@ -24,7 +24,7 @@
 <div id="content" class="contai"  >
 	<script>
 	   if(fromPage!="fullScreen"){
-	        videoFadeOut();
+//	        videoFadeOut();
 	    }
 	</script>
      ##layout("fullScreen_map.html", {}){
