修改右边中海博睿和优化部分代码

--- a/src/main/webapp/WEB-INF/pages/lab/full.html
+++ b/src/main/webapp/WEB-INF/pages/lab/full.html
@@ -22,9 +22,10 @@
 <body>
 
 <div id="content" class="contai"  >
+
 	<script>
 	   if(fromPage!="fullScreen"){
-//	        videoFadeOut();
+	        videoFadeOut();
 	    }
 	</script>
      ##layout("fullScreen_map.html", {}){
@@ -32,10 +33,7 @@
 
 </div>
 
-<script>
-    pageResize();
 
-</script>
 </body>
 </html>
 ##}
