除去多次定义的bodyScale，修改中海博瑞曲线y轴的名称大小位置

--- a/src/main/webapp/WEB-INF/pages/lab/full.html
+++ b/src/main/webapp/WEB-INF/pages/lab/full.html
@@ -24,15 +24,14 @@
 <div id="content" class="contai"  >
 
 	<script>
+        //开场视频
 	   if(fromPage!="fullScreen"){
 	        videoFadeOut();
 	    }
 	</script>
      ##layout("fullScreen_map.html", {}){
      ##}
-
 </div>
-
 
 </body>
 </html>
