--- a/src/main/webapp/WEB-INF/pages/lab/index.html
+++ b/src/main/webapp/WEB-INF/pages/lab/index.html
@@ -41,7 +41,8 @@
 <script>
 
     $(function () {
-//        $(".l.fullScreen_map img.quit").click();
+        //这里是为了方便测试的模拟事件代码，正式使用时请蔽掉
+//        $("#l").find(".flat-footer .legend ul.legend-bottom li a").click()
 //        $("#r .box:eq(0)").addClass("selected").siblings().removeClass("selected");
 //        resetSizeRight();
     })
