修改平面和球形地图的切换，使加载更快。

--- a/src/main/webapp/WEB-INF/pages/lab/flatMap.html
+++ b/src/main/webapp/WEB-INF/pages/lab/flatMap.html
@@ -10,36 +10,15 @@
             width: 100%;
             height: 98%;
         }
-
         .mapFlat {
             height: 100%;
         }
-
-        .btnGroup {
-            font-size: .8em;
-            text-align: center;
-            color: #fff;
-            position: absolute;
-            left: 40%;
-            bottom: 3%;
-        }
-
-        button.btn {
-            color: #fff;
-            margin: 5px;
-            background-color: #286090;
-            border: 1px solid transparent;
-            padding: 4px 8px;
-            border-radius: 4px;
-        }
     </style>
-
 </head>
 <body>
 <div id="mapFlat" class="mapFlat"></div>
 <!--放置地图上的显示信息-->
 <div id="echartTips" class="echartTips"></div>
-
 
 </body>
  <script>
@@ -50,5 +29,23 @@
 <script src="${contextPath!}/static/asserts/echarts/echarts-all.js"></script>
 <script src="${contextPath!}/static/asserts/echarts/world.js"></script>
 <script src="${contextPath!}/static/js/flat.js"></script>
+<!--
+<script>
+    function myFlatMapResize() {
+        setTimeout(function () {
 
+        myFlatMap.resize()
+        console.log("&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;子元素方法被调用",myFlatMap.getOption())
+        },5000)
+    }
+    $(function () {
+//           myFlatMapResize()
+
+    })
+</script>
+-->
+<script>
+    //调用父页面的方法来保证子页面加载完了再执行平面地图加载
+    parent.parentMethod()
+</script>
 </html>
