--- a/src/main/webapp/WEB-INF/pages/lab/full.html
+++ b/src/main/webapp/WEB-INF/pages/lab/full.html
@@ -25,7 +25,7 @@
 	<script>
         //开场视频
 	   if(fromPage!="fullScreen"){
-	        videoFadeOut();
+//	        videoFadeOut();
 	    }
 	</script>
      ##layout("fullScreen_map.html", {}){
