删除平面地图中通过（海外实验室的点的提示hover）和（点击国家）来切换实验室的功能，改为通过点击提示中的圈圈来获取国家名来切换对应实验室页面。

--- a/src/main/webapp/WEB-INF/pages/lab/flatMap.html
+++ b/src/main/webapp/WEB-INF/pages/lab/flatMap.html
@@ -13,6 +13,9 @@
         .mapFlat {
             height: 100%;
         }
+        .echart_tip_head:hover{
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
